WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23397
AXURL is not reported for <INPUT type="image"> elements
https://bugs.webkit.org/show_bug.cgi?id=23397
Summary
AXURL is not reported for <INPUT type="image"> elements
chris fleizach
Reported
2009-01-16 16:44:07 PST
The AXURL of a <INPUT type="image"> element should be the URL of the image
Attachments
patch to add AXURL to input image types
(6.80 KB, patch)
2009-01-16 16:46 PST
,
chris fleizach
oliver
: review+
Details
Formatted Diff
Diff
patch to add AXURL to input image types
(6.80 KB, patch)
2009-01-16 16:46 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2009-01-16 16:46:03 PST
Created
attachment 26817
[details]
patch to add AXURL to input image types
chris fleizach
Comment 2
2009-01-16 16:46:03 PST
Created
attachment 26818
[details]
patch to add AXURL to input image types
Oliver Hunt
Comment 3
2009-01-16 17:30:15 PST
Comment on
attachment 26817
[details]
patch to add AXURL to input image types r=me
Oliver Hunt
Comment 4
2009-01-16 17:31:00 PST
Comment on
attachment 26818
[details]
patch to add AXURL to input image types this appears to be a double submission
chris fleizach
Comment 5
2009-01-16 17:47:39 PST
http://trac.webkit.org/changeset/40003
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug