Bug 23397: AXURL is not reported for <INPUT type="image"> elements https://bugs.webkit.org/show_bug.cgi?id=23397

The AXURL of a <INPUT type="image"> element should be the URL of the image



Canonical link: https://commits.webkit.org/32199@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40003 268f45cc-cd09-0410-ab3c-d52691b4dbfc